...
        seedForUITests(store: store)
        return store
    }

    private static func seedForUITests(store: Store) {
        let calendarBox = store.box(for: PPCalendar.self)
        let calendar = PPCalendar(name: "UI Test Calendar", year: currentYear, numberOfColumns: 2)
        try? calendarBox.put(calendar)

        let batch = PPEventBatch(title: "Women Cycle", color: PCColorOption.option1.colorName)
        let batchBox = store.box(for: PPEventBatch.self)
        try? batchBox.put(batch)

...
